--- a/kancmatket_html/card.html
+++ b/kancmatket_html/card.html
@@ -30,7 +30,7 @@
               <a href="" class="callback_btn2"><i class="fa fa-user" aria-hidden="true"></i>Вход в личный кабинет</a>
               <div id="modal_form_recall2" class="login_item animated"> 
                   <ul class="login_popup_tabs clearfix">
-  <li class="active"><a data-toggle="tab" href="#home">Авторизация</a></li>
+  <li class="active"><a data-toggle="tab" href="#home">Войти</a></li>
   <li class="noactive"><a data-toggle="tab" href="#menu1">Регистрация</a></li>
 </ul>
 
@@ -53,7 +53,7 @@
       </form>
       <span class="no_authorize">Продолжить без регистрации</span>
     <a class="product_buy_btn product_buy_btn_card" href="order_authorization.html" style="margin-top: 10px;">
-             <span>Зарегистрироваться</span>
+            <span>Зарегистрироваться</span>
         </a>
   </div>
           
@@ -107,7 +107,7 @@
           </div>
         <div class=" clearfix">
             <div class="callback1">
-              <a href="" class="callback_btn1"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+              <a href="" class=""><i class="fa fa-shopping-cart callback_btn1" aria-hidden="true"></i></a>
               <div id="modal_form_recall1" class="animated"> 
                   <div class="order_list_item">
       <span class="order_item_close"><i class="fa fa-times" aria-hidden="true"></i></span>
@@ -160,21 +160,21 @@
                    <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
                 </ul>
           </li>
-            </li>
-            <li class="third_level dropdown_btn_third">Канцелярские принадлежности
-             <ul class="dropdown-menu_third">
+            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Канцелярские принадлежности</a>
+                <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
                   <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
                    <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
-                </ul></li>
-             <li class="third_level dropdown_btn_third">Папки, файлы и архивы
-             <ul class="dropdown-menu_third">
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Папки, файлы и архивы</a>
+                <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
                   <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
                    <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
-                </ul></li>
+                </ul>
              </li>
           </ul>
       </li>
@@ -197,14 +197,14 @@
                 </ul>
           </li>
             </li>
-            <li class="third_level dropdown_btn_third">Канцелярские принадлежности
+            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Канцелярские принадлежности</a>
              <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
                   <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
                    <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
                 </ul></li>
-             <li class="third_level dropdown_btn_third">Папки, файлы и архивы
+             <li class="third_level dropdown_btn_third"><a href="catalogue.html">Папки, файлы и архивы</a>
              <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
@@ -232,14 +232,14 @@
                 </ul>
           </li>
             </li>
-            <li class="third_level dropdown_btn_third">Канцелярские принадлежности
+            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Канцелярские принадлежности</a>
              <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
                   <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
                    <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
                 </ul></li>
-             <li class="third_level dropdown_btn_third">Папки, файлы и архивы
+             <li class="third_level dropdown_btn_third"><a href="catalogue.html">Папки, файлы и архивы</a>
              <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
@@ -334,15 +334,93 @@ incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostr
         </div>
         </div>
         <div id="menu2" class="tab-pane fade">
-           <p class="products_details_text"><span>Lorem ipsum dolor sit amet,</span>
-consectetur adipisicing elit, sed do eiusmod tempor 
-incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+           <div class="products_details_text"><div class="comments">
+                    <div class="tabs">
+                        <div class="tabs_item active">
+                            Отзывы
+                            <img src="img/comments.svg" class="comments_icon">
+                            <span class="counter">12</span>
+                        </div>
+                        <div class="tabs_item">
+                            Вопрос-ответ
+                            <img src="img/comments.svg" class="comments_icon">
+                            <span class="counter">12</span>
+                        </div>
+                    </div>
+                    <div class="comments_form">
+                        <form action="">
+                            <textarea class="comments_input"></textarea>
+                            <input type="submit" value="ОК" class="comments_submit">
+                        </form>
+                    </div>
+                    <div class="comments_list">
+                        <div class="comment">
+                            <span class="comment_author">Георгий</span>
+                            <span class="time time_date_change">
+                                            <img src="img/time.svg" alt="" class="time_icon">
+                                            <span class="time_date">16.12.2016  13:25</span>
+                            </span>
+                            <div class="comment_text">
+                                Компания Rustins была основана в 1924 году в Лондоне сыном мебельщика Сидни Растином. Свой первый магазин Сидни открыл в Лондоне, где он продавал готовые изделия местным жителям и торговцам. Отец Сидни был столяром, а первые вложения в бизнес в размере 50 фунтов поступили от его матери.
+                            </div>
+                            <button class="comment_answer">Ответить</button>
+                            <hr class="comment_hr">
+                            <div class="comment">
+                                <span class="comment_author">Георгий</span>
+                                <span class="time time_date_change">
+                                            <img src="img/time.svg" alt="" class="time_icon">
+                                            <span class="time_date">16.12.2016  13:25</span>
+                                </span>
+                                <div class="comment_text">
+                                    Компания Rustins была основана в 1924 году в Лондоне сыном мебельщика Сидни Растином. Свой первый магазин Сидни открыл в Лондоне, где он продавал готовые изделия местным жителям и торговцам. Отец Сидни был столяром, а первые вложения в бизнес в размере 50 фунтов поступили от его матери.
+                                </div>
+                                <button class="comment_answer">Ответить</button>
+                            </div>
+                        </div>
+                        <div class="comment">
+                            <span class="comment_author">Георгий</span>
+                            <span class="time time_date_change">
+                                            <img src="img/time.svg" alt="" class="time_icon">
+                                            <span class="time_date">16.12.2016  13:25</span>
+                            </span>
+                            <div class="comment_text">
+                                Компания Rustins была основана в 1924 году в Лондоне сыном мебельщика Сидни Растином. Свой первый магазин Сидни открыл в Лондоне, где он продавал готовые изделия местным жителям и торговцам. Отец Сидни был столяром, а первые вложения в бизнес в размере 50 фунтов поступили от его матери.
+                            </div>
+                            <button class="comment_answer">Ответить</button>
+                        </div>
+                        <div class="comment">
+                            <span class="comment_author">Георгий</span>
+                            <span class="time time_date_change">
+                                            <img src="img/time.svg" alt="" class="time_icon">
+                                            <span class="time_date">16.12.2016  13:25</span>
+                            </span>
+                            <div class="comment_text">
+                                Компания Rustins была основана в 1924 году в Лондоне сыном мебельщика Сидни Растином. Свой первый магазин Сидни открыл в Лондоне, где он продавал готовые изделия местным жителям и торговцам. Отец Сидни был столяром, а первые вложения в бизнес в размере 50 фунтов поступили от его матери.
+                            </div>
+                            <button class="comment_answer">Ответить</button>
+                        </div>
+                        <div class="comment">
+                            <span class="comment_author">Георгий</span>
+                            <span class="time time_date_change">
+                                            <img src="img/time.svg" alt="" class="time_icon">
+                                            <span class="time_date">16.12.2016  13:25</span>
+                            </span>
+                            <div class="comment_text">
+                                Компания Rustins была основана в 1924 году в Лондоне сыном мебельщика Сидни Растином. Свой первый магазин Сидни открыл в Лондоне, где он продавал готовые изделия местным жителям и торговцам. Отец Сидни был столяром, а первые вложения в бизнес в размере 50 фунтов поступили от его матери.
+                            </div>
+                            <button class="comment_answer">Ответить</button>
+                        </div>
+                        <ul class="comments_pages">
+                            <li class="comments_page active">1</li>
+                            <li class="comments_page">2</li>
+                            <li class="comments_page">3</li>
+                        </ul>
+                    </div>
+                </div></div>
         </div>
          <div id="menu3" class="tab-pane fade">
           <p class="products_details_text">
-          <span>Lorem ipsum dolor sit amet,</span>
-consectetur adipisicing elit, sed do eiusmod tempor 
-incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+          <iframe width="100%" height="315" src="https://www.youtube.com/embed/L2D0zr_P0Ps" frameborder="0" allowfullscreen></iframe></p>
         </div>
 </div>
     </div>
