--- a/kancmatket_html/index.html
+++ b/kancmatket_html/index.html
@@ -101,7 +101,7 @@
           </div>
         <div class=" clearfix">
             <div class="callback1">
-              <a href="" class="callback_btn1"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+              <a href="" class=""><i class="fa fa-shopping-cart callback_btn1" aria-hidden="true"></i></a>
               <div id="modal_form_recall1" class="animated"> 
                   <div class="order_list_item">
       <span class="order_item_close"><i class="fa fa-times" aria-hidden="true"></i></span>
@@ -170,21 +170,21 @@
                    <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
                 </ul>
           </li>
-            </li>
-            <li class="third_level dropdown_btn_third">Канцелярские принадлежности
-             <ul class="dropdown-menu_third">
+            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Канцелярские принадлежности</a>
+                <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
                   <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
                    <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
-                </ul></li>
-             <li class="third_level dropdown_btn_third">Папки, файлы и архивы
-             <ul class="dropdown-menu_third">
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Папки, файлы и архивы</a>
+                <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
                   <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
                    <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
-                </ul></li>
+                </ul>
              </li>
           </ul>
       </li>
@@ -207,14 +207,14 @@
                 </ul>
           </li>
             </li>
-            <li class="third_level dropdown_btn_third">Канцелярские принадлежности
+            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Канцелярские принадлежности</a>
              <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
                   <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
                    <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
                 </ul></li>
-             <li class="third_level dropdown_btn_third">Папки, файлы и архивы
+             <li class="third_level dropdown_btn_third"><a href="catalogue.html">Папки, файлы и архивы</a>
              <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
@@ -242,14 +242,14 @@
                 </ul>
           </li>
             </li>
-            <li class="third_level dropdown_btn_third">Канцелярские принадлежности
+            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Канцелярские принадлежности</a>
              <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
                   <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
                    <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
                 </ul></li>
-             <li class="third_level dropdown_btn_third">Папки, файлы и архивы
+             <li class="third_level dropdown_btn_third"><a href="catalogue.html">Папки, файлы и архивы</a>
              <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
@@ -266,49 +266,49 @@
     <div class="col-md-12">
     <h2>Популярные категории</h2>
       <div id="popular">
-      <a href="">
+      <a href="catalogue.html">
         <div class="popular_item">
           <h3>Бумага</h3>
           <img src="img/paper_hover.png" alt="">
         </div>
         </a>
-        <a href="">
+        <a href="catalogue.html">
         <div class="popular_item">
           <h3>Ежедневники</h3>
           <img src="img/book_hover.png" alt="">
         </div>
         </a>
-        <a href="">
+        <a href="catalogue.html">
         <div class="popular_item">
           <h3>Рюкзаки и пеналы</h3>
           <img src="img/backpack_hover.png" alt="">
         </div>
         </a>
-        <a href="">
+        <a href="catalogue.html">
         <div class="popular_item">
         <h3>Художественные материалы</h3>
           <img src="img/paint_hover.png" alt="">
         </div>
         </a>
-        <a href="">
+        <a href="catalogue.html">
         <div class="popular_item">
           <h3>Подарки и сувенирная продукция</h3>
           <img src="img/gift_hover.png" alt="">
         </div>
         </a>
-        <a href="">
+        <a href="catalogue.html">
         <div class="popular_item">
           <h3>Делопроизводство</h3>
           <img src="img/documents_hover.png" alt="">
         </div>
         </a>
-        <a href="">
+        <a href="catalogue.html">
         <div class="popular_item">
           <h3>Письменные принадлежности</h3>
           <img src="img/pen_hover.png" alt="">
         </div>
         </a>
-        <a href="">
+        <a href="catalogue.html">
         <div class="popular_item">
         <h3>Блокноты и альбомы</h3>
           <img src="img/albums_hoverr.png" alt="">
