--- a/kancmatket_html/contact_history.html
+++ b/kancmatket_html/contact_history.html
@@ -24,7 +24,7 @@
               <a href="" class="callback_btn2"><i class="fa fa-user" aria-hidden="true"></i>Вход в личный кабинет</a>
               <div id="modal_form_recall2" class="login_item animated"> 
                   <ul class="login_popup_tabs clearfix">
-  <li class="active"><a data-toggle="tab" href="#home">Авторизация</a></li>
+  <li class="active"><a data-toggle="tab" href="#home">Войти</a></li>
   <li class="noactive"><a data-toggle="tab" href="#menu1">Регистрация</a></li>
 </ul>
 
@@ -36,7 +36,7 @@
     </form>
     <span class="no_authorize">Забыли пароль?</span>
     <a class="product_buy_btn product_buy_btn_card" href="contact_history.html" style="margin-top: 10px;">
-             <span>Войти</span>
+            <span>Войти</span>
         </a>
   </div>
   <div id="menu1" class="tab-pane fade register">
@@ -101,7 +101,7 @@
           </div>
         <div class=" clearfix">
             <div class="callback1">
-              <a href="" class="callback_btn1"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+              <a href="" class=""><i class="fa fa-shopping-cart callback_btn1" aria-hidden="true"></i></a>
               <div id="modal_form_recall1" class="animated"> 
                   <div class="order_list_item">
       <span class="order_item_close"><i class="fa fa-times" aria-hidden="true"></i></span>
@@ -154,21 +154,21 @@
                    <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
                 </ul>
           </li>
-            </li>
-            <li class="third_level dropdown_btn_third">Канцелярские принадлежности
-             <ul class="dropdown-menu_third">
+            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Канцелярские принадлежности</a>
+                <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
                   <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
                    <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
-                </ul></li>
-             <li class="third_level dropdown_btn_third">Папки, файлы и архивы
-             <ul class="dropdown-menu_third">
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Папки, файлы и архивы</a>
+                <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
                   <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
                    <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
-                </ul></li>
+                </ul>
              </li>
           </ul>
       </li>
@@ -191,14 +191,14 @@
                 </ul>
           </li>
             </li>
-            <li class="third_level dropdown_btn_third">Канцелярские принадлежности
+            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Канцелярские принадлежности</a>
              <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
                   <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
                    <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
                 </ul></li>
-             <li class="third_level dropdown_btn_third">Папки, файлы и архивы
+             <li class="third_level dropdown_btn_third"><a href="catalogue.html">Папки, файлы и архивы</a>
              <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
@@ -226,14 +226,14 @@
                 </ul>
           </li>
             </li>
-            <li class="third_level dropdown_btn_third">Канцелярские принадлежности
+            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Канцелярские принадлежности</a>
              <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
                   <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
                    <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
                 </ul></li>
-             <li class="third_level dropdown_btn_third">Папки, файлы и архивы
+             <li class="third_level dropdown_btn_third"><a href="catalogue.html">Папки, файлы и архивы</a>
              <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
