--- a/kancmatket_html/index.html
+++ b/kancmatket_html/index.html
@@ -154,7 +154,7 @@
     <ul class="sub_nav_container">
       <li class="col-md-4 col-xs-12 dropdown_btn">Товары для школы
           <ul class="dropdown-menu">
-           <li class="third_level dropdown_btn_third"><a href="catalogue.html">Альбомы и тетради</a>
+           <li class="third_level dropdown_btn_third">Альбомы и тетради
                 <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
@@ -162,7 +162,7 @@
                    <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
                 </ul>
           </li>
-            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Рюкзаки и пеналы</a>
+            <li class="third_level dropdown_btn_third">Рюкзаки и пеналы
                 <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
@@ -170,7 +170,7 @@
                    <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
                 </ul>
           </li>
-            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Канцелярские принадлежности</a>
+            <li class="third_level dropdown_btn_third">Канцелярские принадлежности
                 <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
@@ -178,7 +178,7 @@
                    <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
                 </ul>
           </li>
-            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Папки, файлы и архивы</a>
+            <li class="third_level dropdown_btn_third">Папки, файлы и архивы
                 <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
