--- a/kancmatket_html/contact_history.html
+++ b/kancmatket_html/contact_history.html
@@ -322,8 +322,8 @@
           </select>
           <select name="yearpicker" id="yearpicker"></select>
           <div style="height: 1px; border-bottom: 1px dashed #aaa; margin-bottom: 20px;margin-top: 20px;"></div>
-           <label>Введите пароль</label><br><input type="text" placeholder=""><br>
-            <label>Повторите пароль</label><br><input type="text" placeholder=""><br>
+           <label>Введите пароль</label><br><input type="text" placeholder="" disabled=""><br>
+            <label>Повторите пароль</label><br><input type="text" placeholder="" disabled=""><br>
           </form>
            <div class="save"><a href="">Сохранить</a></div>
          <div class="edit_history"><a href="">Редактировать</a></div>
