--- a/kancmatket_html/index.html
+++ b/kancmatket_html/index.html
@@ -35,7 +35,7 @@
       <input type="text" placeholder="Введите Ваш пароль">
     </form>
     <span class="no_authorize">Забыли пароль?</span>
-    <a class="product_buy_btn product_buy_btn_card" href="contact_history.html" style="margin-top: 10px;">
+    <a class="enter_btn product_buy_btn_card" href="contact_history.html" style="margin-top: 10px;">
             <span>Войти</span>
         </a>
   </div>
@@ -46,7 +46,7 @@
       <input type="text" placeholder="Введите Ваш Email">
       </form>
       <span class="no_authorize">Продолжить без регистрации</span>
-    <a class="product_buy_btn product_buy_btn_card" href="order_authorization.html" style="margin-top: 10px;">
+    <a class="enter_btn product_buy_btn_card" href="order_authorization.html" style="margin-top: 10px;">
             <span>Зарегистрироваться</span>
         </a>
   </div>
