--- a/kancmatket_html/catalogue.html
+++ b/kancmatket_html/catalogue.html
@@ -259,7 +259,7 @@
   <div class="container">
     <h3>Ручки</h3>
     <div class="all_product clearfix">
-    <div class="col-md-3">
+    <div class="col-md-3 clearfix">
     <div class="filter_item">
       <h4>Цена</h4>
         <input type="text" id="amount" readonly style="border:0; color:#3b683d;; font-weight:bold; padding-bottom: 20px;">
@@ -292,9 +292,9 @@
     <div class="filter_item">
       <h4>Вид</h4>
       <form>
-          <input class="checkbox" type="checkbox" id="brend7" /><label for="brend7">Для девочек</label></br>
-          <input class="checkbox" type="checkbox" id="brend8" /><label for="brend8">Для мальчиков</label></br>
-          <input class="checkbox" type="checkbox" id="brend9" /><label for="brend9">Унисекс</label></br>
+          <input class="checkbox" type="checkbox" id="brend10" /><label for="brend7">Для девочек</label></br>
+          <input class="checkbox" type="checkbox" id="brend11" /><label for="brend8">Для мальчиков</label></br>
+          <input class="checkbox" type="checkbox" id="brend12" /><label for="brend9">Унисекс</label></br>
         </form>
     </div>
     <div class="filter_show"><a href="">Показать</a></div>
