--- a/kancmatket_html/index.html
+++ b/kancmatket_html/index.html
@@ -141,7 +141,7 @@
 		<a class="order_btn_link" href="">Заказать</a>
 		</div>
 	</div>
-  <div class="owl-slide" style="background-image: url(img/slider2.png)">
+  <div class="owl-slide" style="background-image: url(img/paperclip-178126_1920.jpg)">
 		<div class="owl--text">
 			<h2>Призыв к действию</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna </p>
