--- a/kancmatket_html/index.html
+++ b/kancmatket_html/index.html
@@ -134,7 +134,7 @@
     </div>
 </nav>
 <div id="owl-example" class="owl-carousel clearfix main_carousel">
-  <div class="owl-slide" style="background-image: url(img/bg-deal.jpg)">
+  <div class="owl-slide" style="background-image: url(img/color-866053_1920.jpg)">
 		<div class="owl--text">
 		<h2>Призыв к действию</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna </p>
