--- a/kancmatket_html/catalogue.html
+++ b/kancmatket_html/catalogue.html
@@ -247,7 +247,7 @@
   </div>
 </div>
 <div class="container">
-  <div class="row">
+  <div class="">
     <ol class="breadcrumb">
   <li class="breadcrumb-item"><a href="#">Каталог</a></li>
   <li class="breadcrumb-item"><a href="#">Товары для школы</a></li>
@@ -292,9 +292,9 @@
     <div class="filter_item">
       <h4>Вид</h4>
       <form>
-          <input class="checkbox" type="checkbox" id="brend10" /><label for="brend7">Для девочек</label></br>
-          <input class="checkbox" type="checkbox" id="brend11" /><label for="brend8">Для мальчиков</label></br>
-          <input class="checkbox" type="checkbox" id="brend12" /><label for="brend9">Унисекс</label></br>
+          <input class="checkbox" type="checkbox" id="brend10" /><label for="brend10">Для девочек</label></br>
+          <input class="checkbox" type="checkbox" id="brend11" /><label for="brend11">Для мальчиков</label></br>
+          <input class="checkbox" type="checkbox" id="brend12" /><label for="brend112">Унисекс</label></br>
         </form>
     </div>
     <div class="filter_show"><a href="">Показать</a></div>
