--- a/kancmatket_html/index.html
+++ b/kancmatket_html/index.html
@@ -318,21 +318,14 @@
     </div>
   </div>
 </div>
-<div id="banner_carousel" class="owl-carousel clearfix banner_carousel">
-  <div class="owl-slide" style="background-image: url(img/bg-deal.jpg)">
+<div id="" class="owl-carousel clearfix banner_carousel">
+  <div class="owl-slide" style="background-image: url(img/paper-1559010_1920.jpg); background-attachment: fixed;">
     <div class="owl--text">
     <h2>Призыв к действию</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna </p>
     <a class="learn_more_btn" href="">Узнать больше</a>
     </div>
   </div>
-  <div class="owl-slide" style="background-image: url(img/slider2.png)">
-    <div class="owl--text">
-      <h2>Призыв к действию</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna </p>
-      <a class="learn_more_btn" href="">Узнать больше</a>
-    </div>
-    </div>
 </div>
 <div class="popular_goods">
   <div class="container container_goods">
