--- a/kancmatket_html/about.html
+++ b/kancmatket_html/about.html
@@ -23,7 +23,7 @@
               <a href="" class="callback_btn2"><i class="fa fa-user" aria-hidden="true"></i>Вход в личный кабинет</a>
               <div id="modal_form_recall2" class="login_item animated"> 
                   <ul class="login_popup_tabs clearfix">
-  <li class="active"><a data-toggle="tab" href="#home">Авторизация</a></li>
+  <li class="active"><a data-toggle="tab" href="#home">Войти</a></li>
   <li class="noactive"><a data-toggle="tab" href="#menu1">Регистрация</a></li>
 </ul>
 
@@ -34,8 +34,8 @@
       <input type="text" placeholder="Введите Ваш пароль">
     </form>
     <span class="no_authorize">Забыли пароль?</span>
-    <a class="product_buy_btn product_buy_btn_card" href="contact_history.html" style="margin-top: 10px;">
-             <span>Войти</span>
+    <a class="enter_btn product_buy_btn_card" href="contact_history.html" style="margin-top: 10px;">
+            <span>Войти</span>
         </a>
   </div>
   <div id="menu1" class="tab-pane fade register">
@@ -45,7 +45,7 @@
       <input type="text" placeholder="Введите Ваш Email">
       </form>
       <span class="no_authorize">Продолжить без регистрации</span>
-    <a class="product_buy_btn product_buy_btn_card" href="order_authorization.html" style="margin-top: 10px;">
+    <a class="enter_btn product_buy_btn_card" href="order_authorization.html" style="margin-top: 10px;">
             <span>Зарегистрироваться</span>
         </a>
   </div>
@@ -100,7 +100,7 @@
           </div>
         <div class=" clearfix">
             <div class="callback1">
-              <a href="" class="callback_btn1"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+              <a href="" class=""><i class="fa fa-shopping-cart callback_btn1" aria-hidden="true"></i></a>
               <div id="modal_form_recall1" class="animated"> 
                   <div class="order_list_item">
       <span class="order_item_close"><i class="fa fa-times" aria-hidden="true"></i></span>
