--- a/kancmatket_html/index.html
+++ b/kancmatket_html/index.html
@@ -148,6 +148,34 @@
 			<a class="order_btn_link" href="">Заказать</a>
 		</div>
 		</div>
+     <div class="owl-slide" style="background-image: url(img/color-866053_1920.jpg)">
+    <div class="owl--text">
+    <h2>Призыв к действию</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna </p>
+    <a class="order_btn_link" href="">Заказать</a>
+    </div>
+  </div>
+  <div class="owl-slide" style="background-image: url(img/paperclip-178126_1920.jpg)">
+    <div class="owl--text">
+      <h2>Призыв к действию</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna </p>
+      <a class="order_btn_link" href="">Заказать</a>
+    </div>
+    </div>
+     <div class="owl-slide" style="background-image: url(img/color-866053_1920.jpg)">
+    <div class="owl--text">
+    <h2>Призыв к действию</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna </p>
+    <a class="order_btn_link" href="">Заказать</a>
+    </div>
+  </div>
+  <div class="owl-slide" style="background-image: url(img/paperclip-178126_1920.jpg)">
+    <div class="owl--text">
+      <h2>Призыв к действию</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna </p>
+      <a class="order_btn_link" href="">Заказать</a>
+    </div>
+    </div>
 </div>
 <div class="sub_nav clearfix">
   <div class="wrapper">
@@ -725,14 +753,14 @@
   <div class="container">
     <div class="col-md-12 logos_cotainer">
       <div id="logos">
-        <div class="logos_item"><img src="img/bic_logo.png" alt=""></div>
-        <div class="logos_item"><img src="img/bic_logo.png" alt=""></div>
-        <div class="logos_item"><img src="img/bic_logo.png" alt=""></div>
-        <div class="logos_item"><img src="img/bic_logo.png" alt=""></div>
-        <div class="logos_item"><img src="img/bic_logo.png" alt=""></div>
-        <div class="logos_item"><img src="img/bic_logo.png" alt=""></div>
-        <div class="logos_item"><img src="img/bic_logo.png" alt=""></div>
-        <div class="logos_item"><img src="img/bic_logo.png" alt=""></div>
+        <a href="catalogue.html"><div class="logos_item"><img src="img/bic_logo.png" alt=""></div></a>
+         <a href="catalogue.html"><div class="logos_item"><img src="img/bic_logo.png" alt=""></div></a>
+         <a href="catalogue.html"><div class="logos_item"><img src="img/bic_logo.png" alt=""></div></a>
+         <a href="catalogue.html"><div class="logos_item"><img src="img/bic_logo.png" alt=""></div></a>
+         <a href="catalogue.html"><div class="logos_item"><img src="img/bic_logo.png" alt=""></div></a>
+         <a href="catalogue.html"><div class="logos_item"><img src="img/bic_logo.png" alt=""></div></a>
+         <a href="catalogue.html"><div class="logos_item"><img src="img/bic_logo.png" alt=""></div></a>
+         <a href="catalogue.html"><div class="logos_item"><img src="img/bic_logo.png" alt=""></div></a>
         </div>
     </div>
   </div>
@@ -790,6 +818,7 @@
 <script type="text/javascript" src="js/slick.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTFO4WKZuuL-q5bSbv8LcsfIVwIkh_3aM"
   type="text/javascript"></script>
+  <script type="text/javascript" src="js/smoothscroll.js"></script>
 <script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
