--- a/kancmatket_html/backet.html
+++ b/kancmatket_html/backet.html
@@ -40,16 +40,14 @@
   </div>
   <div id="menu1" class="tab-pane fade register">
   <form>
-    <input type="text" placeholder="Введите Ваше имя"></br>
-      <input type="text" placeholder="Введите Ваш телефон"></br>
-      <input type="text" placeholder="Введите Ваш Email">
+    <input type="text" placeholder="Введите Ваш email"></br>
+      <input type="text" placeholder="Введите Ваш пароль"></br>
+      <input type="text" placeholder="Введите повторно Ваш пароль">
       </form>
-      <span class="no_authorize">Продолжить без регистрации</span>
     <a class="enter_btn product_buy_btn_card" href="order_authorization.html" style="margin-top: 10px;">
             <span>Зарегистрироваться</span>
         </a>
-  </div>
-          
+  </div>      
 </div>
   </div>
 </div>
