--- a/kancmatket_html/index.html
+++ b/kancmatket_html/index.html
@@ -41,16 +41,14 @@
   </div>
   <div id="menu1" class="tab-pane fade register">
   <form>
-    <input type="text" placeholder="Введите Ваше имя"></br>
-      <input type="text" placeholder="Введите Ваш телефон"></br>
-      <input type="text" placeholder="Введите Ваш Email">
+    <input type="text" placeholder="Введите Ваш email"></br>
+      <input type="text" placeholder="Введите Ваш пароль"></br>
+      <input type="text" placeholder="Введите повторно Ваш пароль">
       </form>
-      <span class="no_authorize">Продолжить без регистрации</span>
     <a class="enter_btn product_buy_btn_card" href="order_authorization.html" style="margin-top: 10px;">
             <span>Зарегистрироваться</span>
         </a>
-  </div>
-          
+  </div>      
 </div>
   </div>
 </div>
@@ -292,7 +290,7 @@
 <div class="popular">
   <div class="container">
     <div class="col-md-12">
-    <h2>Популярные категории</h2>
+   <!--  <h2>Популярные категории</h2> -->
       <div id="popular">
       <a href="catalogue.html">
         <div class="popular_item">
