--- a/kancmatket_html/order_authorization.html
+++ b/kancmatket_html/order_authorization.html
@@ -34,22 +34,20 @@
       <input type="text" placeholder="Введите Ваш пароль">
     </form>
     <span class="no_authorize">Забыли пароль?</span>
-    <a class="product_buy_btn product_buy_btn_card" href="contact_history.html" style="margin-top: 10px;">
+    <a class="enter_btn product_buy_btn_card" href="contact_history.html" style="margin-top: 10px;">
             <span>Войти</span>
         </a>
   </div>
   <div id="menu1" class="tab-pane fade register">
   <form>
-    <input type="text" placeholder="Введите Ваше имя"></br>
-      <input type="text" placeholder="Введите Ваш телефон"></br>
-      <input type="text" placeholder="Введите Ваш Email">
+    <input type="text" placeholder="Введите Ваш email"></br>
+      <input type="text" placeholder="Введите Ваш пароль"></br>
+      <input type="text" placeholder="Введите повторно Ваш пароль">
       </form>
-      <span class="no_authorize">Продолжить без регистрации</span>
-    <a class="product_buy_btn product_buy_btn_card" href="order_authorization.html" style="margin-top: 10px;">
+    <a class="enter_btn product_buy_btn_card" href="order_authorization.html" style="margin-top: 10px;">
             <span>Зарегистрироваться</span>
         </a>
-  </div>
-          
+  </div>      
 </div>
   </div>
 </div>
@@ -254,6 +252,7 @@
   <div class="container">
    <h3>Подтверждение заказа</h3>
   <div class="col-md-6">
+  <div class="authorize_tab" style="margin-bottom: 100px;">
     <ul class="nav nav-tabs authorization_tabs">
   <li class="active"><a data-toggle="tab" href="#authourization">Авторизация</a></li>
   <li class="noactive"><a data-toggle="tab" href="#register">Регистрация</a></li>
@@ -272,15 +271,16 @@
   </div>
   <div id="register" class="tab-pane fade register">
   <form>
-    <input type="text" placeholder="Введите Ваше имя"></br>
-      <input type="text" placeholder="Введите Ваш телефон"></br>
-      <input type="text" placeholder="Введите Ваш Email">
+    <input type="text" placeholder="Введите Ваш email"></br>
+      <input type="text" placeholder="Введите Ваш пароль"></br>
+      <input type="text" placeholder="Введите  повторно Ваш пароль">
       </form>
-      <!-- <span class="no_authorize">Продолжить без регистрации</span> -->
+      <span class="no_authorize">Продолжить без регистрации</span>
     <a class="product_buy_btn product_buy_btn_card" href="" style="float: right; padding: 10px;">
-            <span>Зарегистрироваться</span>
+            Зарегистрироваться
         </a>
   </div>
+</div>
 </div>
 <div class="order_details_main">
 <div class="order_details_main_header"><h4>Детали заказа</h4></div>
@@ -293,10 +293,16 @@
 
 <div class="tab-content">
   <div id="delivery1" class="tab-pane fade in active">
-    <form>
-      <input type="text" placeholder="Введите Ваш город"></br>
-      <input type="text" placeholder="Введите Ваш адрес">
-    </form>
+  <div style="position: relative;">
+   <div class="map_contacts" style="z-index: 2">
+      <ul class="map_contacts_container">
+        <li class="map_contacts_item"> <i class="fa fa-home" aria-hidden="true"></i>
+        69063, г.Запорожье, <br>ул. Ильича, 49
+        <li class="map_contacts_item"><i class="fa fa-phone" aria-hidden="true"></i>(061) 764-72-70</li>
+        <li class="map_contacts_item"><i class="fa fa-envelope" aria-hidden="true"></i>kans-market.zp@mail.ru</li>
+      </ul>
+      </div>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script><div style="overflow:hidden;height:300px;width:100%;"><div id="gmap_canvas" style="height:500px;width:600px;"><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" href="http://www.map-embed.com" id="get-map-data">map-embed.com</a></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:14,center:new google.maps.LatLng(50.486078,30.49785099999997),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(50.486078, 30.49785099999997)});infowindow = new google.maps.InfoWindow({content:"<b>&#1050;&#1072;&#1085;&#1094;&#1084;&#1072;&#1088;&#1082;&#1077;&#1090;</b><br/>&#1087;&#1077;&#1090;&#1088;&#1086;&#1074;&#1082;&#1072;<br/> &#1082;&#1080;&#1077;&#1074;" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script></div></div>
   </div>
   <div id="delivery2" class="fade">
   <form>
@@ -315,15 +321,13 @@
 <div class="tab-content">
   <div id="payment1" class="tab-pane fade in active">
     <form>
-      <input type="text" placeholder="Введите Ваш город"></br>
-      <input type="text" placeholder="Введите Ваш адрес">
+      <input type="text" placeholder="Введите Ваше имя"></br>
+      <input type="text" placeholder="Введите Ваш телефон"></br>
+      <textarea placeholder="Введите Ваше сообщение"></textarea> 
     </form>
   </div>
   <div id="payment2" class="fade">
-  <form>
-    <input type="text" placeholder="Введите Ваш город"></br>
-      <input type="text" placeholder="Отделение Новая Почта">
-      </form>
+  
   </div>
 </div>
 </div>
@@ -331,6 +335,8 @@
 
 </div>
 </div>
+<div style="clear:both;"></div>
+<a class="aprove" href="">Заказ подтверждаю</a>
   </div>
   <div class="col-md-2">  </div>
   <div class="col-md-4">
@@ -392,7 +398,7 @@
       </div>
       <div class="order_list_total">
         <div class="order_list_total_item">Итого:<span class="order_list_total_value">480<span>грн</span></span></div>
-        <a href="" class="edit_order">Редактировать заказ</a>
+        <a href="backet.html" class="edit_order">Редактировать заказ</a>
       </div>
     </div>
   </div>
