--- a/kancmatket_html/card.html
+++ b/kancmatket_html/card.html
@@ -22,7 +22,9 @@
   <script   src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"   integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="   crossorigin="anonymous"></script>
 </head>
 <body>
-<nav class="navbar">
+<nav class="navbar navbar-default helper_nav">
+</nav>
+<nav class="navbar navbar-fixed-top">
   <div class="container clearfix top_nav">
    <a class="navbar-brand page-scroll" href="index.html"><img src="img/logo_new.png"  id="logo" alt="logo top"></a> 
     
