--- a/kancmatket_html/loyalty.html
+++ b/kancmatket_html/loyalty.html
@@ -15,6 +15,8 @@
 	<script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
 </head>
 <body>
+<nav class="navbar navbar-default helper_nav">
+</nav>
 <nav class="navbar">
   <div class="container clearfix top_nav">
    <a class="navbar-brand page-scroll" href="index.html"><img src="img/logo_new.png"  id="logo" alt="logo top"></a> 
