--- a/kancmatket_html/contact_history.html
+++ b/kancmatket_html/contact_history.html
@@ -18,7 +18,7 @@
 <body>
 <nav class="navbar navbar-default helper_nav">
 </nav>
-<nav class="navbar">
+<nav class="navbar navbar-fixed-top">
   <div class="container clearfix top_nav">
    <a class="navbar-brand page-scroll" href="index.html"><img src="img/logo_new.png"  id="logo" alt="logo top"></a> 
     
