--- a/kancmatket_html/about.html
+++ b/kancmatket_html/about.html
@@ -337,9 +337,9 @@
     <div class="map_contacts">
       <ul class="map_contacts_container">
         <li class="map_contacts_item"> <i class="fa fa-home" aria-hidden="true"></i>
-        69063, г.Запорожье, <br>ул. Ильича, 49
-        <li class="map_contacts_item"><i class="fa fa-phone" aria-hidden="true"></i>(061) 764-72-70</li>
-        <li class="map_contacts_item"><i class="fa fa-envelope" aria-hidden="true"></i>kans-market.zp@mail.ru</li>
+        +38 (097) 504 33 99
+        <li class="map_contacts_item"><i class="fa fa-phone" aria-hidden="true"></i>  +38 (063) 196 95 05</li>
+        <li class="map_contacts_item"><i class="fa fa-envelope" aria-hidden="true"></i>info@kancmarket.kiev.ua</li>
       </ul>
       </div>
       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2679.3546219246104!2d35.187612!3d47.813345!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x66a9d85c1a88419a!2z0JrQsNC90YYt0JzQsNGA0LrQtdGCINCa0LDQvdGG0LXQu9GP0YDQuNGP!5e0!3m2!1sru!2s!4v1404753315740" width="100%" height="370" frameborder="0"  frameborder="0" style="border:0"></iframe></div>
